# TechDevComplex

./: CMakeLists.txt  README.md  main.cpp
Complex_lib/: CMakeLists.txt  Complex.cpp  Complex.h
Errors/: ZeroDivision.cpp  ZeroDivision.h
Google_tests/: CMakeLists.txt  ComplexTest.cpp
